# OpenGL-Tutorial

./: CMakeLists.txt
include/: shader.h
include/glad/: glad.h
shaders/: frag.glsl  vert.glsl
src/: glad.c  main.cc  shader.cc
